--- a/tc349 Code/index.html
+++ b/tc349 Code/index.html
@@ -29,14 +29,24 @@
         <div id="feed-controls">
           <a title="toggle proximity" class="toggle-button selected" id="proximity" href="#"><i class="fa fa-location-arrow"></i></a>
 
-          <a title="toggle public" class="toggle-button" id="public" href="#"><i class="fa fa-location-arrow"></i></a>
+          <a title="toggle public" class="toggle-button" id="public" href="#"><i class="fa fa-comment-o"></i></a>
 
         </div>
         <form>
 
         </form>
 
+        <div id="feed">
+          <ul>
+            <li>Baby Mama Drama</li>
+            <li>This Prof Talks too fast</li>
+            <li>Seriously Slow Down</li>
+          </ul>
+        </div>
+
         </section>
+
+
 
 
 
