Updated FishBowl Submission
Updates

--- a/tc349 Code/index.html
+++ b/tc349 Code/index.html
@@ -38,6 +38,9 @@
 
         <div id="feed">
           <ul>
+            <li>
+              <p class="user-count">349</p>
+            </li>
             <li>Baby Mama Drama</li>
             <li>This Prof Talks too fast</li>
             <li>Seriously Slow Down</li>
