--- a/Portfolio1/html5-boilerplate-4.3-4.0/index copy.html
+++ b/Portfolio1/html5-boilerplate-4.3-4.0/index copy.html
@@ -55,6 +55,11 @@
 
       </section>
 
+      <section class="gallery">
+          <p><img alt="k" height="300" width="200" src="img/k.jpg" class="rotate90" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></p>
+          <p><img alt="vases" height="300" width="200" src="img/vases.jpg" class="rotate90" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"><p style="clear: both;"></p>
+      </section>
+
       <section class="comparibles">
 
         <h3>Comparibles</h3>
